--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "aura/project-kernel": "dev-develop-2",
+        "aura/cli": "dev-develop-2",
+        "aura/dispatcher" : "dev-develop-2"
     },
     "autoload": {
         "files": ["autoload.php"]
