Add branch alias

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "aura/project-kernel": "dev-develop-2",
-        "aura/cli": "dev-develop-2",
-        "aura/dispatcher" : "dev-develop-2"
+        "aura/project-kernel": "2.*@dev",
+        "aura/cli": "2.*@dev",
+        "aura/dispatcher" : "2.*@dev"
     },
     "autoload": {
         "files": ["autoload.php"]
@@ -23,6 +23,9 @@
     "extra": {
         "aura": {
             "type": "kernel"
+        },
+        "branch-alias": {
+            "dev-develop-2": "2.0.x-dev"
         }
     }
 }
