--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,4 @@ php:
   - 5.4
   - 5.5
   - hhvm
-before_script:
-  - composer create-project aura/cli-project --prefer-dist --stability=dev
-  - rm -rf cli-project/vendor/aura/cli-kernel/*
-  - cp -r autoload.php  cli-project/vendor/aura/cli-kernel/
-  - cp -r composer.json cli-project/vendor/aura/cli-kernel/
-  - cp -r config        cli-project/vendor/aura/cli-kernel/
-  - cp -r README.md     cli-project/vendor/aura/cli-kernel/
-  - cp -r scripts       cli-project/vendor/aura/cli-kernel/
-  - cp -r src           cli-project/vendor/aura/cli-kernel/
-  - cp -r tests         cli-project/vendor/aura/cli-kernel/
-  - cd cli-project/vendor/aura/cli-kernel/tests
-script: phpunit
+script: php scripts/integration-test.sh
