--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "aura/dispatcher" : "2.*@dev"
     },
     "autoload": {
-        "files": ["autoload.php"]
+        "psr-4": {
+            "Aura\\Cli_Kernel\\": "src/"
+        }
     },
     "extra": {
         "aura": {
