--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "aura/project-kernel": "dev-reduced",
+        "aura/project-kernel": "2.*@dev",
         "aura/cli": "2.*@dev",
         "aura/dispatcher" : "2.*@dev",
         "psr/log": "1.*"
