--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,11 @@
     "name": "aura/cli-kernel",
     "type": "library",
     "description": "The kernel files for an Aura CLI project.",
-    "keywords": ["cli", "kernel"],
-    "homepage": "http://auraphp.com/package/Aura.Cli_Kernel",
+    "keywords": [
+        "cli",
+        "kernel"
+    ],
+    "homepage": "https://github.com/auraphp/Aura.Cli_Kernel",
     "license": "BSD-2-Clause",
     "authors": [
         {
@@ -15,7 +18,7 @@
         "php": ">=5.4.0",
         "aura/project-kernel": "2.*@dev",
         "aura/cli": "2.*@dev",
-        "aura/dispatcher" : "2.*@dev",
+        "aura/dispatcher": "2.*@dev",
         "psr/log": "1.*"
     },
     "autoload": {
