--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "aura/project-kernel": "2.*@dev",
-        "aura/cli": "2.*@dev",
-        "aura/dispatcher": "2.*@dev",
-        "psr/log": "1.*"
+        "aura/project-kernel": "~2.0",
+        "aura/cli": "~2.0",
+        "aura/dispatcher": "~2.0"
     },
     "autoload": {
         "psr-4": {
@@ -38,6 +37,5 @@
         "branch-alias": {
             "dev-develop-2": "2.0.x-dev"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
