--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ php:
   - 5.5
   - 5.6
   - hhvm
+  - 7
 before_script:
-  - cd tests/kernel
-script: ./phpunit.sh
+  - composer self-update
+  - composer install
+script:
+  - phpunit --coverage-clover=coverage.clover
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
