--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,14 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "aura/project-kernel": "~2.0",
-        "aura/cli": "~2.0",
+        "php": ">=7.3.0",
+        "aura/project-kernel": "3.x-dev",
+        "aura/cli": "3.x-dev",
         "aura/dispatcher": "~2.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~7",
+        "aura/di": "~4.0"
     },
     "autoload": {
         "psr-4": {
