--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
         "aura/cli": "3.x-dev",
         "aura/dispatcher": "~2.0"
     },
+    "repositories": [
+        { "type": "vcs", "url": "https://github.com/kenjis/Aura.Project_Kernel.git" },
+        { "type": "vcs", "url": "https://github.com/kenjis/Aura.Cli.git" }
+    ],
     "require-dev": {
         "phpunit/phpunit": "~7",
         "aura/di": "~4.0"
