--- a/composer.json
+++ b/composer.json
@@ -15,18 +15,17 @@
         }
     ],
     "require": {
-        "php": ">=7.3.0",
-        "aura/project-kernel": "3.x-dev",
-        "aura/cli": "3.x-dev",
+        "php": ">=7.2.0",
+        "aura/project-kernel": "4.x-dev",
+        "aura/cli": "update-for-php7-dev",
         "aura/dispatcher": "~2.0"
     },
     "repositories": [
-        { "type": "vcs", "url": "https://github.com/kenjis/Aura.Project_Kernel.git" },
         { "type": "vcs", "url": "https://github.com/kenjis/Aura.Cli.git" }
     ],
     "require-dev": {
-        "phpunit/phpunit": "~7",
-        "aura/di": "~4.0"
+        "phpunit/phpunit": "^8.5",
+        "aura/di": "^4.0"
     },
     "autoload": {
         "psr-4": {
