--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,4 +7,9 @@
     <php>
         <env name="AURA_CONFIG_MODE" value="cli-kernel-test" />
     </php>
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">./src</directory>
+        </whitelist>
+    </filter>
 </phpunit>
