--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Check PHP Version
       run: php -v
 
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
+    # - name: Validate composer.json and composer.lock
+    #   run: composer validate --strict
 
     - name: Cache Composer packages
       id: composer-cache
